Resolved errors and problems by sonarqube report